# CrystalCanvas

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  WIKI.md  dev_env.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  test_browser.js  tsconfig.json  v0.6.1-structure-2d.manifest.json  v0.6.1-structure-3d.manifest.json  vite.config.ts
.agents/: rules.md  third_party_api.md
.github/workflows/: release.yml
cpp/: CMakeLists.txt
cpp/include/: physics_kernel.hpp  physics_kernel_internal.hpp
cpp/src/: crystal_parser.cpp  crystal_parser.hpp  physics_kernel.cpp
cpp/tests/: CMakeLists.txt  test_slab_builder.cpp  test_slab_eigen.cpp  test_slab_layers.cpp  test_slab_surface_basis.cpp  test_spglib_robustness.cpp  test_supercell_eigen.cpp
docs/: Algorithms.md  DeveloperGuide.md  FAQ.md  IPC_Commands.md  Shader_Reference.md  TestingGuide.md  UserManual.md  UserManual_v0.1.md
ipc/: command-classification.json  event-classification.json  inventory.json
scripts/: browser-ipc-policy.test.mjs  check-ipc-contract.mjs  event-lifecycle.test.mjs  generate-ipc-commands.mjs  interaction-contract.test.mjs  ipc-contract-runtime.test.mjs  ipc-inventory.mjs  ipc-inventory.test.mjs  phonon-interaction.test.mjs  sync-1a-state-refresh.test.mjs  sync-1b-no-explicit-refetch.test.mjs  sync-1c-single-refresh.test.mjs  ui-assistant.test.mjs  ui-contract.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: bench_ffi.rs  bench_volumetric.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shaders/: bond_cylinder.wgsl  impostor_sphere.wgsl  isosurface_render.wgsl  marching_cubes.wgsl  volume_raycast.wgsl
src-tauri/src/: brillouin_zone.rs  commands.rs  crystal_state.rs  ipc.rs  kpath.rs  kpath_2d.rs  lib.rs  main.rs  menu_api_test.rs  phonon.rs  settings.rs  transaction.rs  undo.rs  volumetric.rs  wannier.rs
src-tauri/src/commands/: analysis.rs  editing.rs  file_io.rs  geometry.rs  mod.rs  reciprocal.rs  viewport.rs  volumetric.rs  wannier.rs
src-tauri/src/ffi/: bridge.rs  mod.rs
src-tauri/src/io/: axsf_parser.rs  chgcar_parser.rs  cube_parser.rs  export.rs  import.rs  mod.rs  poscar_parser.rs  qe_parser.rs  wannier_hr_parser.rs  xsf_volumetric_parser.rs
src-tauri/src/llm/: command.rs  context.rs  mod.rs  prompt.rs  provider.rs  router.rs  sandbox.rs
src-tauri/src/renderer/: bz_renderer.rs  camera.rs  gpu_context.rs  instance.rs  isosurface.rs  mc_lut.rs  mod.rs  pipeline.rs  ray_picking.rs  render_config.rs  renderer.rs  volume_raycast.rs
src-tauri/src/renderer/shaders/: bz_blit.wgsl  line.wgsl
src-tauri/src/utils/: colors.rs  mod.rs
src-tauri/tests/: test_cif_parsing.rs  test_command_schema.rs  test_deepseek_live.rs  test_exporters.rs  test_fe2o3_spacegroup.rs  test_ffi_roundtrip.rs  test_importers.rs  test_interact_1_drag_session.rs  test_interact_1_drag_session_real.rs  test_interact_2_phonon_animation.rs  test_mc_breaker.rs  test_overlap_detection.rs  test_phys_1a_input_gate.rs  test_phys_1b_structural_invariants.rs  test_phys_1c_failure_atomicity.rs  test_phys_1c_real_failure_atomicity.rs  test_ray_picking.rs  test_rutile_polyhedra.rs  test_slab_v2_ffi.rs  test_sync_1c_tauri_smoke.rs
src-tauri/tests/fixtures/: interact_2a_phonon_display.manifest.json  interact_2a_phonon_display.yaml
src/components/layout/: BottomStatusBar.tsx  ExportImageModal.tsx  LeftSidebar.tsx  LlmAssistant.tsx  PhononImportModal.tsx  PromptModal.tsx  RightSidebar.tsx  SettingsModal.tsx  Shell.tsx  TopNavBar.tsx
src/components/panels/: AtomOperationsPanel.tsx  BondAnalysisPanel.tsx  BrillouinZonePanel.tsx  MeasurementPanel.tsx  PhononPanel.tsx  SlabPanel.tsx  SupercellPanel.tsx  VolumetricPanel.tsx  WannierPanel.tsx  index.ts  shared.tsx
src/hooks/: useCameraInteraction.ts  useFileDrop.ts  useTauriMenu.ts
src/ipc/: commands.generated.ts  contracts.ts  contracts.typecheck.ts
src/types/: commands.ts  crystal.ts
src/utils/: Icons.tsx  cn.ts  colors.ts  spacegroup.tsx  tauri-mock.ts
tests/: rel-1-release-gate.test.mjs  undo-redo-native-menu-gate.test.mjs
tests/data/: BaSrTiO3_fractional.cif  Fe2O3_mp-19770_symmetrized.cif  POSCAR  diamond.cif  graphene.cif  mos2_monolayer.cif  nacl.cif  rutile.cif  scf.in  si_bulk.cif  slab_a_vacuum.cif
tests/data/BFO/: CHGCAR
tests/data/CeO/: dynmat.axsf  dynmat.mold  matdyn.modes  ph.in  ph.out  q2r.in  q2r.out  scf.in  scf.out
tests/data/Fe2O3/: Fe2O3_mp-19770_primitive.cif
tests/data/anatase/: anatase_00001.cube  o-3D_QP_BSE.exc_qpt1_3d_1.xsf
tests/wannier/: gen_graphene_hr.py  graphene.cif
