[package]
name = "crystal-canvas"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = "2.0"

# Rendering engine (M3)
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
cxx-build = "1.0"
tauri-build = "2.0"

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_ffi"
harness = false

[[bin]]
name = "parse_cif"
path = "bin/parse_cif.rs"
