[package]
name = "crystal-canvas"
version = "0.1.0"
authors = ["Xiao Jiang and CrystalCanvas Contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "crystal-canvas"

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["macos-private-api", "unstable"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-trait = "0.1"

# Rendering engine (M3)
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
log = "0.4"
raw-window-handle = "0.6"
tokio = { version = "1.49.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tauri-plugin-dialog = "~2.6.0"
keyring = "3.6.3"
dotenvy = "0.15.7"
tauri-plugin-clipboard-manager = "~2.2.0"
open = "5.3.3"
tauri-plugin-store = "2.4.2"
image = "0.25"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "bench_ffi"
harness = false

[[bin]]
name = "parse_cif"
path = "bin/parse_cif.rs"

[[bin]]
name = "render_demo"
path = "bin/render_demo.rs"
